marker and waypoint size can be empty (= no)